--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,4 +17,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Go Tests
-        run: go test -v -tags=integration
+        run: |
+          go test -v -tags=integration
+          go test -cover
