--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: build
 
 on:
   push:
@@ -18,5 +18,5 @@ jobs:
 
       - name: Go Tests
         run: |
-          go test -v -tags=integration
-          go test -cover
+          go build -v ./...
+          go test -v -race -coverprofile=c.out -covermode=atomic ./...
